--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
+    "chart.js": "^3.5.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.1",
     "react-scripts": "5.0.0",
